add the search events endpoint
