# src/models/components/index.ts
@@ -5,6 +5,8 @@
 export * from "./accounttype.js";
 export * from "./billingaddon.js";
 export * from "./billinglimit.js";
+export * from "./clievent.js";
+export * from "./interactiontype.js";
 export * from "./organization.js";
 export * from "./organizationbillingaddon.js";
 export * from "./organizationusage.js";
