# src/models/components/interactiontype.ts
@@ -1,0 +1,43 @@
+/*
+ * Code generated by Speakeasy (https://speakeasy.com). DO NOT EDIT.
+ */
+
+import * as z from "zod";
+import { ClosedEnum } from "../../types/enums.js";
+
+export const InteractionType = {
+  CiExec: "CI_EXEC",
+  CliExec: "CLI_EXEC",
+  Lint: "LINT",
+  OpenapiDiff: "OPENAPI_DIFF",
+  TargetGenerate: "TARGET_GENERATE",
+  Tombstone: "TOMBSTONE",
+  Authenticate: "AUTHENTICATE",
+  Quickstart: "QUICKSTART",
+  Run: "RUN",
+  Configure: "CONFIGURE",
+  Publish: "PUBLISH",
+  Test: "TEST",
+} as const;
+export type InteractionType = ClosedEnum<typeof InteractionType>;
+
+/** @internal */
+export const InteractionType$inboundSchema: z.ZodNativeEnum<
+  typeof InteractionType
+> = z.nativeEnum(InteractionType);
+
+/** @internal */
+export const InteractionType$outboundSchema: z.ZodNativeEnum<
+  typeof InteractionType
+> = InteractionType$inboundSchema;
+
+/**
+ * @internal
+ * @deprecated This namespace will be removed in future versions. Use schemas and types that are exported directly from this module.
+ */
+export namespace InteractionType$ {
+  /** @deprecated use `InteractionType$inboundSchema` instead. */
+  export const inboundSchema = InteractionType$inboundSchema;
+  /** @deprecated use `InteractionType$outboundSchema` instead. */
+  export const outboundSchema = InteractionType$outboundSchema;
+}
